--- a/snowball.css
+++ b/snowball.css
@@ -4,6 +4,12 @@ body {
      background-color: black;
 }
 
+#instructions {
+    color: white;
+    margin: 12px 0 6px;
+    font-size: 16px;
+}
+
 #board {
     background-color: black;
 }
